--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,10 +29,12 @@ h3{
 .jeu .gauche img{
     width: 100%;
     height: 70vh;
+    cursor: pointer;
 }
 
 .jeu .droite{
     width: 35%;
     border: solid black 2px;
     height: 70vh;
+    overflow: auto;
 }
