changement couleur de fond du magasin

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,6 +42,7 @@ body{
     border: solid black 2px;
     height: 70vh;
     overflow: auto;
+    background-color: white;
 }
 
 .jeu .droite .shop{
