--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,65 @@
     padding: 0;
 }
 
+/*Gestion des modal du jeu*/
+.modal {
+    display: none;
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    padding-top: 30vh; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  }
+  
+  /* Modal Content */
+  .modal-content {
+    background-color: #fefefe;
+    margin: auto;
+    padding: 40px;
+    border: 1px solid #888;
+    width: 80%;
+  }
+  
+  .modal-content h2{
+    font-size: 50px;
+    color: rgb(99, 165, 189);
+    text-align: center;
+  }
+
+  .modal-content h3{
+    font-size: 30px;
+    color: rgb(99, 165, 189);
+    text-align: center;
+    margin-top: 50px;
+    margin-bottom: 50px;
+  }
+
+  .modal-content p{
+    font-size: 17px;
+    text-align: center;
+    margin-bottom: 5px;
+  }
+
+  /* The Close Button */
+  .close {
+    color: #aaaaaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+  }
+
 h1{
     text-align: center;
     font-size: 50px;
