--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -62,6 +62,14 @@
     cursor: pointer;
   }
 
+header{
+  background-color: rgb(99, 165, 189);
+  width: fit-content;
+  margin-left: 50%;
+  transform: translateX(-50%);
+  padding: 1%;
+}
+
 h1{
     text-align: center;
     font-size: 50px;
